# papermill_meetup

./: .gitignore  README.md  date_print.ipynb  date_print_2026.ipynb  execute_all_notebooks.py  execute_all_notebooks_params.py  finance_script.sh  main.py  output.ipynb  papermill_api.py  papermill_api_loop.py  papermill_example2.ipynb  pyproject.toml
execute_all_folder/: blob1.ipynb  date_print1.ipynb
ice/: date_print_2022_12.ipynb  date_print_2023_12.ipynb  date_print_2026.ipynb  date_print_2026_12.ipynb  output.ipynb  output2.ipynb
rapports/: 2_reduc_dim_clustering_output_tsne_30_alldata.html
