[project]
name = "250624-meetup-python-papermill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "anywidget>=0.9.18",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "nbconvert>=7.16.6",
    "papermill>=2.6.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "yfinance>=0.2.63",
]
