[project]
name = "250624-meetup-python-papermill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "papermill>=2.6.0",
    "plotly>=6.1.2",
]
